result: Fix UI overflow bug with for large image files. Fixes #4495.

--- a/app/assets/stylesheets/common/_navigation.scss
+++ b/app/assets/stylesheets/common/_navigation.scss
@@ -84,6 +84,7 @@ nav {
 /* Footer */
 
 footer {
+  background-color: $lighter-blue;
   color: $dark-grey;
   font-size: 0.95em;
   padding: 2em $dimen-horizontal;
