--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -28,6 +28,8 @@
 }
 
 #content {
+  display: flex;
+  flex-direction: column;
   z-index: auto !important;
 }
 
